--- a/client/package.json
+++ b/client/package.json
@@ -23,13 +23,14 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.10",
-    "@angular/cli": "~13.2.6",
+    "@angular-devkit/build-angular": "^16.1.7",
+    "@angular/cli": "^16.1.7",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
