--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "bootswatch": "^5.3.1",
     "ngx-bootstrap": "^8.0.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.5.0",
