--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~16.1.8",
+    "@angular/cdk": "^17.3.8",
     "@angular/common": "~16.1.8",
     "@angular/compiler": "~16.1.8",
     "@angular/core": "~16.1.8",
@@ -19,10 +20,13 @@
     "@angular/platform-browser": "~16.1.8",
     "@angular/platform-browser-dynamic": "~16.1.8",
     "@angular/router": "~16.1.8",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "bootswatch": "^5.3.1",
+    "ng-gallery": "^11.0.0",
     "ngx-bootstrap": "^8.0.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.5.0",
